@@ -1,9 +1,11 @@
 // Copyright 2002-2011, University of Colorado
 package edu.colorado.phet.circuitconstructionkit.view.piccolo;
 
-import java.awt.Shape;
+import java.awt.*;
 
 import edu.colorado.phet.circuitconstructionkit.model.components.Branch;
+import edu.colorado.phet.common.phetcommon.simsharing.messages.ParameterKeys;
+import edu.colorado.phet.common.phetcommon.simsharing.messages.ParameterSet;
 import edu.colorado.phet.common.piccolophet.PhetPNode;
 import edu.umd.cs.piccolo.PNode;
 
@@ -19,5 +21,9 @@ public abstract class BranchNode extends PhetPNode {
 
     public Shape getClipShape( PNode parent ) {
         return null;
+    }
+
+    public ParameterSet getPositionParameterSet() {
+        return ParameterSet.parameterSet( ParameterKeys.x, getBranch().getX1() ).with( ParameterKeys.y, getBranch().getY1() ).with( ParameterKeys.x2, getBranch().getX2() ).with( ParameterKeys.y2, getBranch().getY2() );
     }
 }
