@@ -1,10 +1,7 @@
 // Copyright 2002-2011, University of Colorado
 package edu.colorado.phet.circuitconstructionkit.view.piccolo.lifelike;
 
-import java.awt.BasicStroke;
-import java.awt.Color;
-import java.awt.Component;
-import java.awt.Shape;
+import java.awt.*;
 
 import edu.colorado.phet.circuitconstructionkit.CCKSimSharing;
 import edu.colorado.phet.circuitconstructionkit.model.CCKDefaults;
@@ -64,7 +61,7 @@ public class WireNode extends BranchNode {
 
             public void mouseReleased( PInputEvent event ) {
                 circuitInteractionModel.dropBranch( wire );
-                SimSharingManager.sendUserMessage( wire.getUserComponentID(), UserComponentTypes.sprite, CCKSimSharing.UserActions.movedComponent );
+                SimSharingManager.sendUserMessage( wire.getUserComponentID(), UserComponentTypes.sprite, CCKSimSharing.UserActions.movedComponent, getPositionParameterSet() );
             }
 
             public void mousePressed( PInputEvent event ) {
